# magpie_msgs

./: CMakeLists.txt  package.xml
action/: DeliGrasp.action  ExecutePolicy.action  ExecuteTrajectory.action  ForceControl.action
msg/: DeliGraspParams.msg  Episode.msg  GripperState.msg  Observation.msg  PolicyAction.msg
srv/: CaptureFrame.srv  DetectObjects.srv  GetPose.srv  MoveJoint.srv  MoveLinear.srv  SegmentObject.srv  SetGripperForce.srv  SetGripperPosition.srv  SetSpeed.srv  StartEpisode.srv  StartRecording.srv  StopRecording.srv
